<resources>
    <string name="app_name">Universe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Put your email here or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="WelcomeSlogan">Where Bright Minds \nCollide</string>
    <string name="text_under_slogan">A cutting-edge discussion forum \nenhanced with AI tools</string>
    <string name="login_welcome">Welcome \nBack!</string>
    <string name="or_continue_with">- OR Continue with -</string>
    <string name="apple_logo">Apple Logo</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="dont_have_account">Don\'t have an account? <u>Sign up</u></string>
    <string name="username_error_warning">Please fill in your Username or Email</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="create_an_account">Create an \nAccount</string>
    <string name="action_sign_up">Register</string>
    <string name="i_already_have_an_account">I Already have an Account <u>Login</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="put_your_email_here">Put your Email here</string>
    <string name="please_fill_in_your_password">Please fill in your Password</string>
    <string name="default_web_client_id">613453504706-hs4c5b6dna4b3kcnob0g1s6mj31c0u78.apps.googleusercontent.com</string>
    <string name="more_images">+ more images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="replies">Replies</string>
    <string name="user_name">User Name</string>
    <string name="create_post">create</string>
    <string name="text_create_post">Create Post</string>
    <string name="votes">Votes</string>
    <string name="asal_universitas">State your College</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="language_settings_title">Change Language</string>
    <string name="language_settings_summary">Open system language settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading_replies">Loading replies…</string>
    <string name="loading_likes">Loading likes…</string>
    <string name="likes">Likes: %d</string>
    <string name="no_replies_yet">No replies yet</string>
    <string name="no_likes_yet">No likes yet</string>
    <string name="error_loading_replies">Error loading replies</string>
    <string name="error_loading_likes">Error loading likes</string>
    <string name="failed_to_load_likes">Failed to load likes</string>
    <string name="failed_to_load_replies">Failed to load replies</string>
    <string name="headerTitle">Welcome back</string>
    <string name="headerSubtitle">Learn new things today</string>
    <string name="btnTrending">Trending</string>
    <string name="btnNew">New</string>
    <string name="searchEditText">Search here…</string>
    <string name="topic1">Machine Learning</string>
    <string name="topic2">Cloud Computing</string>
    <string name="topic3">Mobile Development</string>
    <string name="view_post">View Post</string>
    <string name="tag">TAG</string>
    <string name="tag2">TAG</string>
    <string name="title">TITLE</string>
    <string name="bawah_title">Lorem Ipsum is simply dummy text…</string>
    <string name="read_more">Read More</string>
    <string name="reply">Reply</string>
    <string name="Button_ai_answer">AI Answer</string>
    <string name="bagan_replies">Replies</string>
    <string name="Pengguna">USER</string>
    <string name="comment_pengguna">Lorem Ipsum is simply dummy text…</string>
    <string name="jumlah_likes">10</string>
    <string name="reply_comment">Reply</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="discussion_title">Discussion Title</string>
    <string name="content_description">Lorem Ipsum content goes here</string>
    <string name="likes_count">112 likes</string>
    <string name="replies_count">47 replies</string>
    <string name="detailTitle">View Post</string>
    <string name="write_comments">Write your comments here…</string>
    <string name="ai_answer">AI Answer</string>
    <string name="repliestitle">Replies</string>
    <string name="dashboard">Dashboard</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="_0">0</string>
    <string name="loading">Loading…</string>
    <string name="post_count_format">%1$d</string>
    <string name="replies_count_format">%1$d</string>
    <string name="hint_title">Title</string>
    <string name="delete_topic">Delete Topic</string>
    <string name="edit_profile_pic">edit picture</string>
    <string name="edit_university">University</string>
    <string name="save_changes">save changes</string>
    <string name="save_username">update success</string>
    <string name="profile_settings_header">Profile</string>
    <string name="profile_settings_summary">Change your profile</string>
    <string name="profile_settings_title">Edit Profile</string>
    <string name="no_university">Empty</string>

</resources>