<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.LandingActivity">


    <!-- Guest -->
    <TextView
        android:id="@+id/continue_as_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/continue_as_guest"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:textColor="?attr/colorPrimaryVariant"



        />





    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WelcomeSlogan"
        android:id="@+id/welcome_slogan"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        android:layout_marginBottom="88dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_under_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/welcome_slogan"
        android:layout_marginTop="28dp"
        />

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="284dp"
        android:layout_height="72dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        android:layout_marginBottom="25dp" />


    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="284dp"
        android:layout_height="72dp"
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp" />




</androidx.constraintlayout.widget.ConstraintLayout>
